# template-poetry

./: Dockerfile  README.md  README.md.template  app.sh  cookiecutter.json  pyproject.toml
.github/custom/: build.sh
.github/workflows/: cookiecutter-build.yml
template/: __main__.py  main.py
{{cookiecutter.repo_name}}/: Dockerfile  README.md  README.md.template  app.sh  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: generate-readme.yml  poetry-publish-ghcr.yml  poetry-publish-pypi.yml  poetry-release.yml
{{cookiecutter.repo_name}}/tests/: test_main.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __main__.py  main.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __main__.py
