[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "1.0.0"
description = ""
authors = ["{{cookiecutter.email}}"]
readme = "README.md"
packages = [{ include = "{{cookiecutter.repo_name}}" }]
license = "SSPL-1.0"
classifiers = ["Private :: Do not Upload"]

[tool.poetry.scripts]
{{cookiecutter.repo_name}} = "{{cookiecutter.repo_name}}.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
