[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.0.0"
description = ""
authors = ["{{cookiecutter.name}} <{{cookiecutter.email}}>"]
readme = "README.md"
packages = [{ include = "{{cookiecutter.package_name}}" }]
license = "SSPL-1.0"
classifiers = ["Private :: Do not Upload"]

[tool.poetry.scripts]
"{{cookiecutter.repo_name}}" = "{{cookiecutter.package_name}}.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
